--- a/index.html
+++ b/index.html
@@ -22,5 +22,17 @@
       data-hx-swap="outerHTML"
       data-hx-get="common.header.partial.html"
     ></header>
+    <main>
+      <div
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="index.clients-carousel.partial.html"
+      ></div>
+    </main>
+    <footer
+      data-hx-trigger="load"
+      data-hx-swap="outerHTML"
+      data-hx-get="common.footer.partial.html"
+    ></footer>
   </body>
 </html>
