Update footer title

--- a/common.footer.partial.html
+++ b/common.footer.partial.html
@@ -9,7 +9,7 @@
     <footer class="footer">
       <div class="footer__details">
         <div class="footer__subscribe">
-          <h4>Subscribe</h4>
+          <h4>Subscribe to us</h4>
           <p>Join us to get the latest updates!</p>
           <form action="https://formspree.io/f/xeqyndak" method="post">
             <input type="email" name="email" required />
